--- a/BSA.html
+++ b/BSA.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viuwport" content="widht=device-widht">
-    <title>LOGIN FORM | DAN Aleko</title>
+    <title>BSA SEAPORT</title>
     <link rel="stylesheet" href="style.css" /> 
     <link real="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
